--- a/html/product.html
+++ b/html/product.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Master's Brew</title>
+
+    <link rel="stylesheet" href="../styles/product.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
-    
+    <header id="global-header"></header>
+
+    <main>
+
+
+        <div id="productTab">
+            <div id="tab-all" class="subTab">
+                <span class="flag-icon flag-icon-un"></span>
+                <span>全部</span>
+            </div>
+            <div id="tab-ethiopoa" class="subTab">
+                <span class="flag-icon flag-icon-et"></span>
+                <span>衣索比亞</span>
+            </div>
+            <div id="tab-kenya" class="subTab">
+                <span class="flag-icon flag-icon-ke"></span>
+                <span>肯亞</span>
+            </div>
+            <div id="tab-guatemala" class="subTab">
+                <span class="flag-icon flag-icon-gt"></span>
+                <span>瓜地馬拉</span>
+            </div>
+            <div id="tab-costarica" class="subTab">
+                <span class="flag-icon flag-icon-cr"></span>
+                <span>哥斯大黎加</span>
+            </div>
+            <div id="tab-colombia" class="subTab">
+                <span class="flag-icon flag-icon-co"></span>
+                <span>哥倫比亞</span>
+            </div>
+            <div id="tab-brazil" class="subTab">
+                <span class="flag-icon flag-icon-br"></span>
+                <span>巴西</span>
+            </div>
+            <div id="tab-indonesia" class="subTab">
+                <span class="flag-icon flag-icon-id"></span>
+                <span>印尼</span>
+            </div>
+        </div>
+
+        <div class="adsImg"></div>
+
+        <div id="ProdcutDiv">
+            <div id="ProductGrid-ethiopoa" class="row"></div>
+            <div id="ProductGrid-kenya" class="row"></div>
+        </div>
+        </div>
+
+
+
+
+
+    </main>
+
 </body>
+<!-- 外部引入jQuery -->
+<script src="../js/jquery-3.7.1.js"></script>
+<!-- 外部引入js -->
+<script type="module" src="../js/product.js"></script>
+
 </html>
