增加精選咖啡

--- a/html/product.html
+++ b/html/product.html
@@ -16,37 +16,36 @@
 
     <main>
 
-
         <div id="productTab">
-            <div id="tab-all" class="subTab">
+            <div id="tab-All" class="subTab">
                 <span class="flag-icon flag-icon-un"></span>
                 <span>全部</span>
             </div>
-            <div id="tab-ethiopoa" class="subTab">
+            <div id="tab-Ethiopia" class="subTab">
                 <span class="flag-icon flag-icon-et"></span>
                 <span>衣索比亞</span>
             </div>
-            <div id="tab-kenya" class="subTab">
+            <div id="tab-Kenya" class="subTab">
                 <span class="flag-icon flag-icon-ke"></span>
                 <span>肯亞</span>
             </div>
-            <div id="tab-guatemala" class="subTab">
+            <div id="tab-Guatemala" class="subTab">
                 <span class="flag-icon flag-icon-gt"></span>
                 <span>瓜地馬拉</span>
             </div>
-            <div id="tab-costarica" class="subTab">
+            <div id="tab-CostaRica" class="subTab">
                 <span class="flag-icon flag-icon-cr"></span>
                 <span>哥斯大黎加</span>
             </div>
-            <div id="tab-colombia" class="subTab">
+            <div id="tab-Colombia" class="subTab">
                 <span class="flag-icon flag-icon-co"></span>
                 <span>哥倫比亞</span>
             </div>
-            <div id="tab-brazil" class="subTab">
+            <div id="tab-Brazil" class="subTab">
                 <span class="flag-icon flag-icon-br"></span>
                 <span>巴西</span>
             </div>
-            <div id="tab-indonesia" class="subTab">
+            <div id="tab-Indonesia" class="subTab">
                 <span class="flag-icon flag-icon-id"></span>
                 <span>印尼</span>
             </div>
@@ -54,16 +53,37 @@
 
         <div class="adsImg"></div>
 
-        <div id="ProdcutDiv">
-            <div id="ProductGrid-ethiopoa" class="row"></div>
-            <div id="ProductGrid-kenya" class="row"></div>
-        </div>
+        <div id="ProductDiv-All" class="productDiv">
+            <div class="row"></div>   
         </div>
 
+        <div id="ProductDiv-Ethiopia" class="productDiv">
+            <div class="row"></div>
+        </div>
 
+        <div id="ProductDiv-Kenya" class="productDiv">
+            <div class="row"></div>
+        </div>
 
+         <div id="ProductDiv-Guatemala" class="productDiv">
+            <div class="row"></div>
+        </div>
 
+        <div id="ProductDiv-CostaRica" class="productDiv">
+            <div class="row"></div>
+        </div>
 
+       <div id="ProductDiv-Colombia" class="productDiv">
+            <div class="row"></div>
+        </div>
+
+         <div id="ProductDiv-Brazil" class="productDiv">
+            <div class="row"></div>
+        </div>
+
+         <div id="ProductDiv-Indonesia" class="productDiv">
+            <div class="row"></div>
+        </div>
     </main>
 
 </body>
