--- a/html/index.html
+++ b/html/index.html
@@ -19,14 +19,14 @@
     <!-- 建立header標籤: 定義頁首，包含網站標題, logo與導覽列 -->
     <header>
        <header id="global-header"></header>
-        <nav>
+        <!-- <nav>
             <ul>
                 <li id="gotoHomePage"><a href="index.html">首頁</a></li>
                 <li id="gotoProductPage"><a href="product.html">精品咖啡</a></li>
                 <li id="gotoSocialPage"><a href="index.html">社群分享</a></li>
                 <li id="gotoContactPage"><a href="index.html">聯繫我們</a></li>
             </ul>
-        </nav>
+        </nav> -->
     </header>
 
     <main>
@@ -109,7 +109,7 @@
     <!-- 外部引入jQuery -->
     <script src="../js/jquery-3.7.1.js"></script>
     <!-- 外部引入js -->
-    <script src="../js/index.js"></script>
+    <script type="module" src="../js/index.js"></script>
 
 </body>
 
