--- a/html/nav.html
+++ b/html/nav.html
@@ -7,6 +7,8 @@
     <title>Master's Brew</title>
 
     <link rel="stylesheet" href="../styles/nav.css">
+
+    
 </head>
 
 <body>
@@ -17,7 +19,7 @@
             <ul>
                 <li id="gotoHomePage"><a href="index.html">首頁</a></li>
                 <li id="gotoProductPage"><a href="product.html">精品咖啡</a></li>
-                <li id="gotoSocialPage"><a href="index.html">沖煮技法</a></li>
+                <li id="gotoSocialPage"><a href="index.html">購物車</a></li>
                 <li id="gotoContactPage"><a href="index.html">聯繫我們</a></li>
             </ul>
         </nav>
