--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
 <body>
     <!-- 建立header標籤: 定義頁首，包含網站標題, logo與導覽列 -->
     <header>
-       <header id="global-header"></header>
+        <header id="global-header"></header>
         <!-- <nav>
             <ul>
                 <li id="gotoHomePage"><a href="index.html">首頁</a></li>
@@ -32,6 +32,7 @@
     <main>
         <!-- 咖啡產區介紹 -->
         <section class="beanIntroduction">
+
             <!-- 標語 -->
             <div id="mainSlogan">
                 <h2>品味世界，從這杯開始</h2>
@@ -108,8 +109,10 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <!-- 外部引入jQuery -->
     <script src="../js/jquery-3.7.1.js"></script>
-    <!-- 外部引入js -->
+    <!-- 外部引入js -->  
     <script type="module" src="../js/index.js"></script>
+    <!-- <script src="../js/cart.js"></script> -->
+
 
 </body>
 
