--- a/html/nav.html
+++ b/html/nav.html
@@ -7,8 +7,9 @@
     <title>Master's Brew</title>
 
     <link rel="stylesheet" href="../styles/nav.css">
+    <!-- <link rel="stylesheet" href="../styles/cart.css"> -->
 
-    
+
 </head>
 
 <body>
@@ -19,11 +20,17 @@
             <ul>
                 <li id="gotoHomePage"><a href="index.html">首頁</a></li>
                 <li id="gotoProductPage"><a href="product.html">精品咖啡</a></li>
-                <li id="gotoSocialPage"><a href="index.html">購物車</a></li>
-                <li id="gotoContactPage"><a href="index.html">聯繫我們</a></li>
+                <li id="gotoContactPage"><a href="info.html">聯繫我們</a></li>
             </ul>
         </nav>
-    </header> 
+
+        <!-- <div id="cart-button" class="cart-button nav-cart">
+            <span class="cmw-icon" aria-hidden="true">🛒</span>
+            <span class="cmw-count" aria-live="polite">0</span>
+        </div> -->
+    </header>
+
+    <!-- <script src="../js/cart.js"></script> -->
 </body>
 
 </html>
