--- a/html/product.html
+++ b/html/product.html
@@ -91,5 +91,6 @@
 <script src="../js/jquery-3.7.1.js"></script>
 <!-- 外部引入js -->
 <script type="module" src="../js/product.js"></script>
+<!-- <script src="../js/cart.js"></script> -->
 
 </html>
